# micro-vorbis

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Kconfig  LICENSE  NOTICE  README.md  idf_component.yml  library.json
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
cmake/: esp-idf.cmake  functions.cmake  host.cmake  sources.cmake
examples/decode_benchmark/: CMakeLists.txt  README.md  convert_ogg.py  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
examples/decode_benchmark/main/: CMakeLists.txt  decode_benchmark.cpp  test_audio.h
host_examples/vorbis_to_wav/: CMakeLists.txt  vorbis_to_wav.cpp  wav_writer.cpp  wav_writer.h
include/micro_vorbis/: ogg_vorbis_decoder.h
script/: clang-tidy.sh
src/: README.md  ogg_vorbis_decoder.cpp  vorbis_header.cpp  vorbis_header.h
src/tremor/: CHANGES.md  COPYING  asm_arm.h  backends.h  bitwise.c  block.c  block.h  codebook.c  codebook.h  codec_internal.h  custom_allocator.h  floor0.c  floor1.c  info.c  ivorbiscodec.h  mapping0.c  mdct.c  misc.h  os.h  res012.c  window.c
src/tremor/ogg/: ogg.h  os_types.h
tests/: .clang-tidy  CMakeLists.txt  generate_test_data.sh  test_ogg_vorbis_decoder.cpp
tests/fuzz/: CMakeLists.txt  README.md  coverage.sh  fuzz_ogg_vorbis_decode.cpp  generate_seeds.sh  vorbis.dict
